# cargo-deadlinks

./: CHANGELOG.md  Cargo.toml
src/: check.rs  lib.rs
